--- a/products/films/index.html
+++ b/products/films/index.html
@@ -54,7 +54,7 @@
                 <h3>The Life of a Meatball</h3>
             </a>
             <a href="product#theglitch" class="item-box" data-category="short">
-                <img src="https://unlim8ted.com/images\products\films\TheGlitchCover.png" alt="The Glitch">
+                <img src="https://unlim8ted.com/assets/images\products\films\TheGlitchCover.png" alt="The Glitch">
                 <h3>The Glitch</h3>
             </a>
             <!--
