--- a/products/index.html
+++ b/products/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Products - Unlim8ted Studio Productions">
     <meta property="og:description"
         content="Explore a wide range of products from Unlim8ted Studio Productions, including films, music, games, AI, and more.">
-    <meta property="og:image" content="https://unlim8ted.com/images/products-meta-image.jpg">
+    <meta property="og:image" content="https://unlim8ted.com/assets/images/products-meta-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
     <meta property="twitter:title" content="Products - Unlim8ted Studio Productions">
     <meta property="twitter:description"
         content="Explore a wide range of products from Unlim8ted Studio Productions, including films, music, games, AI, and more.">
-    <meta property="twitter:image" content="https://unlim8ted.com/images/products-meta-image.jpg">
+    <meta property="twitter:image" content="https://unlim8ted.com/assets/images/products-meta-image.jpg">
   <script type="module" src="https://unlim8ted.com/components/site-navbar.js"></script>
       <script type="module">
     import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
@@ -62,7 +62,7 @@
                 <p>Listen to our newest podcasts.</p>
             </a>
             <a href="books" class="product-box">
-                <img src="https://unlim8ted.com/images/products/books/book icon.png" alt="Books">
+                <img src="https://unlim8ted.com/assets/images/products/books/book icon.png" alt="Books">
                 <h2>Books</h2>
                 <p>Read our latest books.</p>
             </a>
@@ -72,23 +72,23 @@
                 <p>Play fun and challenging games.</p>
             </a>
             <a href="physical-items" class="product-box">
-                <img src="https://unlim8ted.com\images\products\clothes\image.webp" alt="Clothes">
+                <img src="https://unlim8ted.com/assets/images/products/clothes/image.webp" alt="Clothes">
                 <h2>Physical Items</h2>
                 <p>Check out our stylish clothes.</p>
             </a>
             <a href="software" class="product-box">
-                <img src="https://unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
+                <img src="https://unlim8ted.com/assets/images/products/software/Screenshot 2023-09-21 181742(1).png"
                     alt="Software">
                 <h2>Software</h2>
                 <p>Explore our apps and video games.</p>
             </a>
             <a href="ai" class="product-box">
-                <img src="https://unlim8ted.com/images/products/ai/ai icon.png" alt="AI">
+                <img src="https://unlim8ted.com/assets/images/products/ai/ai icon.png" alt="AI">
                 <h2>AI</h2>
                 <p>Explore our AI products.</p>
             </a>
             <a href="images" class="product-box">
-                <img src="https://unlim8ted.com/images/Unlim8tedImages/space with foregroudn.jpg" alt="Images">
+                <img src="https://unlim8ted.com/assets/images/Unlim8tedImages/space with foregroudn.jpg" alt="Images">
                 <h2>Images</h2>
                 <p>Explore some of our best images.</p>
             </a>
