--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@
             <div class="htrack" id="htrack" aria-label="Featured products">
               <!-- Use assets you already have -->
               <article class="pCard">
-                <img class="pMedia" src="/images/products/games/TimeCatCover.png" alt="TimeCat cover">
+                <img class="pMedia" src="assets/images/products/games/TimeCatCover.png" alt="TimeCat cover">
                 <div class="pBody">
                   <h4 class="pTitle">TimeCat</h4>
                   <p class="pDesc">A time-bending cat adventure with systems that fight back (in a good way).</p>
@@ -1521,7 +1521,7 @@
               </article>
 
               <article class="pCard">
-                <img class="pMedia" src="/images/products/films/TheGlitchCover.png" alt="The Glitch cover">
+                <img class="pMedia" src="assets/images/products/films/TheGlitchCover.png" alt="The Glitch cover">
                 <div class="pBody">
                   <h4 class="pTitle">The Glitch</h4>
                   <p class="pDesc">Short-form film experiments—mystery, style, and a little reality distortion.</p>
@@ -1533,7 +1533,7 @@
               </article>
 
               <article class="pCard">
-                <img class="pMedia" src="/images/products/software/star_tracker_icon_square.png"
+                <img class="pMedia" src="assets/images/products/software/star_tracker_icon_square.png"
                   alt="Star Tracker icon">
                 <div class="pBody">
                   <h4 class="pTitle">Star Tracker</h4>
@@ -1546,7 +1546,7 @@
               </article>
 
               <article class="pCard">
-                <img class="pMedia" src="/images/products/ai/ai%20icon.png" alt="AI icon">
+                <img class="pMedia" src="assets/images/products/ai/ai%20icon.png" alt="AI icon">
                 <div class="pBody">
                   <h4 class="pTitle">AI Tools</h4>
                   <p class="pDesc">Creative utilities, generators, and helpers—built to be used, not just demoed.</p>
@@ -1558,7 +1558,7 @@
               </article>
 
               <article class="pCard">
-                <img class="pMedia" src="/images/products/music/music%20icon.png" alt="Music icon">
+                <img class="pMedia" src="assets/images/products/music/music%20icon.png" alt="Music icon">
                 <div class="pBody">
                   <h4 class="pTitle">Music</h4>
                   <p class="pDesc">Soundtracks, scenes, and headphone worlds.</p>
