Update sponsor logo image URLs in index.html

--- a/index.html
+++ b/index.html
@@ -1646,18 +1646,18 @@ Z
               <div class="sponsors-label">In collaboration with</div>
 
               <div class="sponsor-logos">
-                <img src="https://unlim8ted.com/images/logo/Zipper Line Logo.png" alt="Zipper Line" draggable="false">
+                <img src="https://unlim8ted.com/assets/images/logo/Zipper Line Logo.png" alt="Zipper Line" draggable="false">
 
-                <img src="https://unlim8ted.com/images/logo/Bnacintech Industries logo.png" alt="Bnacintech Industries"
+                <img src="https://unlim8ted.com/assets/images/logo/Bnacintech Industries logo.png" alt="Bnacintech Industries"
                   draggable="false">
 
-                <img src="https://unlim8ted.com/images/logo/Sky Tale Media Logo.png" alt="Bnacintech Industries"
+                <img src="https://unlim8ted.com/assets/images/logo/Sky Tale Media Logo.png" alt="Bnacintech Industries"
                   draggable="false">
 
-                <img src="https://unlim8ted.com/images/logo/LMMH_LOGO+BLACK.webp" alt="Bnacintech Industries"
+                <img src="https://unlim8ted.com/assets/images/logo/LMMH_LOGO+BLACK.webp" alt="Bnacintech Industries"
                   draggable="false">
 
-                <img src="https://unlim8ted.com/images/logo/New Heights Logo.png" alt="Bnacintech Industries"
+                <img src="https://unlim8ted.com/assets/images/logo/New Heights Logo.png" alt="Bnacintech Industries"
                   draggable="false">
               </div>
             </div>
