Fix image source path for games card in products

--- a/products/index.html
+++ b/products/index.html
@@ -67,7 +67,7 @@
                 <p>Read our latest books.</p>
             </a>
             <a href="games" class="product-box">
-                <img src="https://unlim8ted.com\images\products\games\air-hockey-preview.webp" alt="Games">
+                <img src="https://unlim8ted.com\assets/images\products\games\air-hockey-preview.webp" alt="Games">
                 <h2>Games</h2>
                 <p>Play fun and challenging games.</p>
             </a>
