Update image source for 'The Life of a Meatball'

--- a/products/films/index.html
+++ b/products/films/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="item-category" id="film-items">
             <a href="product#The-Life-of-a-Meatball" class="item-box" data-category="short">
-                <img src="https://unlim8ted.com/images\products\films\The Life of a Meatball.jpg"
+                <img src="https://unlim8ted.com/assets/images\products\films\The Life of a Meatball.jpg"
                     alt="The Life of a Meatball">
                 <h3>The Life of a Meatball</h3>
             </a>
