--- a/products/games/index.html
+++ b/products/games/index.html
@@ -364,38 +364,38 @@
         </div>
         <div class="item-category" id="game-items">
             <a href="square-pixels" class="item-box" data-category="entertainment">
-                <img src="https://unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
+                <img src="https://unlim8ted.com/assets/images/products/software/Screenshot 2023-09-21 181742(1).png"
                     alt="Square Pixels">
                 <h3>Square Pixels</h3>
             </a>
             <a href="TimeCat" class="item-box" data-category="puzzles">
-                <img src="https://unlim8ted.com/images/products/software/timecat.webp"
+                <img src="https://unlim8ted.com/assets/images/products/software/timecat.webp"
                     alt="TimeCat">
                 <h3>TimeCat</h3>
             </a>
             <a href="/products/product#the-life-of-a-meatball-jigsaw-puzzle"
                 class="item-box" data-category="puzzles">
-                <img src="https://unlim8ted.com\images\products\games\image.webp" alt="">
+                <img src="https://unlim8ted.com\assets/images\products\games\image.webp" alt="">
                 <h3>The Life of a Meatball Puzzle</h3>
             </a>
             <a href="/products/games/puzzle-squares" class="item-box" data-category="puzzles">
-                <img src="https://unlim8ted.com\images\products\games\puzzle-square-preview.png" alt="">
+                <img src="https://unlim8ted.com\assets/images\products\games\puzzle-square-preview.png" alt="">
                 <h3>Puzzle Square 1</h3>
             </a>
             <a href="/products/games/puzzle-squares" class="item-box" data-category="puzzles">
-                <img src="https://unlim8ted.com\images\products\games\puzzle-square-preview.png" alt="">
+                <img src="https://unlim8ted.com\assets/images\products\games\puzzle-square-preview.png" alt="">
                 <h3>Puzzle Square 2</h3>
             </a>
             <a href="/products/games/air-hockey" class="item-box" data-category="online">
-                <img src="https://unlim8ted.com\images\products\games\air-hockey-preview.webp" alt="">
+                <img src="https://unlim8ted.com\assets/images\products\games\air-hockey-preview.webp" alt="">
                 <h3>Air Hockey Online</h3>
             </a>
             <a href="/products/games/chess" class="item-box" data-category="online">
-                <img src="https://unlim8ted.com\images\products\games\chess-preview.jpg" alt="">
+                <img src="https://unlim8ted.com\assets/images\products\games\chess-preview.jpg" alt="">
                 <h3>Chess</h3>
             </a>
             <a href="/products/product#life" class="item-box" data-category="card games">
-                <img src="https://unlim8ted.com\images\products\games\life cover.jpeg" alt="">
+                <img src="https://unlim8ted.com\assets/images\products\games\life cover.jpeg" alt="">
                 <h3>life</h3>
             </a>
             <!-- Add more game items here -->
