--- a/products/software/index.html
+++ b/products/software/index.html
@@ -50,82 +50,82 @@
             </select>
         </div>
         <div class="item-category" id="software-items">
-            <a href="product#Download-Any-Youtube-Video" class="item-box" data-category="productivity">
+            <a href="/products/product#Download-Any-Youtube-Video" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/download-any-youtube-video.jpg">
                 <h3>Download Any Youtube Video</h3>
             </a>
 
-            <a href="product#Face-Stuff" class="item-box" data-category="productivity">
+            <a href="/products/product#Face-Stuff" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/face-stuff.jpg" alt="Face Stuff">
                 <h3>Face Stuff</h3>
             </a>
 
-            <a href="product#Multiplayer-Physics-Simulator" class="item-box" data-category="entertainment">
+            <a href="/products/product#Multiplayer-Physics-Simulator" class="item-box" data-category="entertainment">
                 <img src="https://unlim8ted.com/images/products/multiplayer-physics-simulator.jpg">
                 <h3>Multiplayer Physics Simulator</h3>
             </a>
 
-            <a href="product#Easy-Pygame-UI-Creator" class="item-box" data-category="productivity">
+            <a href="/products/product#Easy-Pygame-UI-Creator" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/easy_pygame_ui-maker.jpg">
                 <h3>Easy pygame UI Creator</h3>
             </a>
 
-            <a href="product#Copy-Keyframes-to-Selected-Blender-Addon" class="item-box" data-category="productivity">
+            <a href="/products/product#Copy-Keyframes-to-Selected-Blender-Addon" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/Copy-Keyframes-to-Selected-Blender-Addon.jpg">
                 <h3>Copy Keyframes to Selected Blender Addon</h3>
             </a>
 
-            <a href="product#ChatApp" class="item-box" data-category="all">
+            <a href="/products/product#ChatApp" class="item-box" data-category="all">
                 <img src="https://unlim8ted.com/images/products/chatapp.jpg">
                 <h3>ChatApp</h3>
             </a>
 
-            <a href="product#Organisms_Sim" class="item-box" data-category="productivity">
+            <a href="/products/product#Organisms_Sim" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/organisms_sim.jpg">
                 <h3>Organisms Sim</h3>
             </a>
 
-            <a href="product#FTL-Node-Based-Modding" class="item-box" data-category="productivity">
+            <a href="/products/product#FTL-Node-Based-Modding" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/ftl-node-based-modding.jpg">
                 <h3>FTL Node Based Modding</h3>
             </a>
 
-            <a href="product#FTL-ChooseYourSide" class="item-box" data-category="entertainment">
+            <a href="/products/product#FTL-ChooseYourSide" class="item-box" data-category="entertainment">
                 <img src="https://unlim8ted.com/images/products/ftl-chooseyourside.jpg">
                 <h3>FTL ChooseYourSide</h3>
             </a>
 
-            <a href="product#wrighting" class="item-box" data-category="productivity">
+            <a href="/products/product#wrighting" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/wrighting.jpg">
                 <h3>wrighting</h3>
             </a>
 
-            <a href="product#Music-AI-Gen" class="item-box" data-category="productivity">
+            <a href="/products/product#Music-AI-Gen" class="item-box" data-category="productivity">
                 <img src="https://unlim8ted.com/images/products/music-ai-gen.jpg">
                 <h3>Music AI Gen</h3>
             </a>
 
-            <a href="product#ChessVR" class="item-box" data-category="entertainment">
+            <a href="/products/product#ChessVR" class="item-box" data-category="entertainment">
                 <img src="https://unlim8ted.com/images/products/chessvr.jpg">
                 <h3>ChessVR</h3>
             </a>
 
-            <a href="product#Kindel-E-ink-games" class="item-box" data-category="entertainment">
+            <a href="/products/product#Kindel-E-ink-games" class="item-box" data-category="entertainment">
                 <img src="https://unlim8ted.com/images/products/kindel-e-ink-games.jpg">
                 <h3>Kindel E-ink games</h3>
             </a>
 
-            <a href="product#turbo-octo-funicular" class="item-box" data-category="entertainment">
+            <a href="/products/product#turbo-octo-funicular" class="item-box" data-category="entertainment">
                 <img src="https://unlim8ted.com/images/products/turbo-octo-funicular.jpg">
                 <h3>turbo-octo-funicular</h3>
             </a>
 
-            <a href="product#unicornia" class="item-box" data-category="entertainment">
+            <a href="/products/product#unicornia" class="item-box" data-category="entertainment">
                 <img src="https://unlim8ted.com/images/products/unicornia.jpg">
                 <h3>Unicornia</h3>
             </a>
 
-            <a href="product#confuzzled" class="item-box" data-category="entertainment">
+            <a href="/products/product#confuzzled" class="item-box" data-category="entertainment">
                 <img src="https://unlim8ted.com/images/products/Confuzzled.jpg">
                 <h3>Confuzzled</h3>
             </a>
