--- a/frontend/products/index.html
+++ b/frontend/products/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Products - Unlim8ted Studio Productions">
     <meta property="og:description"
         content="Explore a wide range of products from Unlim8ted Studio Productions, including films, music, games, AI, and more.">
-    <meta property="og:image" content="assets.unlim8ted.com/images/products-meta-image.jpg">
+    <meta property="og:image" content="https://assets.unlim8ted.com/images/products-meta-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
     <meta property="twitter:title" content="Products - Unlim8ted Studio Productions">
     <meta property="twitter:description"
         content="Explore a wide range of products from Unlim8ted Studio Productions, including films, music, games, AI, and more.">
-    <meta property="twitter:image" content="assets.unlim8ted.com/images/products-meta-image.jpg">
+    <meta property="twitter:image" content="https://assets.unlim8ted.com/images/products-meta-image.jpg">
   <script type="module" src="https://unlim8ted.com/components/site-navbar.js"></script>
       <script type="module">
     import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
@@ -47,48 +47,48 @@
         <p>Discover our amazing products.</p>
         <div class="product-category">
             <a href="films" class="product-box">
-                <img src="assets.unlim8ted.com/images/products/films/The Life of a Meatball.jpg" alt="Films">
+                <img src="https://assets.unlim8ted.com/images/products/films/The Life of a Meatball.jpg" alt="Films">
                 <h2>Films</h2>
                 <p>Explore our latest films.</p>
             </a>
             <a href="music" class="product-box">
-                <img src="assets.unlim8ted.com/images/products/music/music icon.png" alt="Music">
+                <img src="https://assets.unlim8ted.com/images/products/music/music icon.png" alt="Music">
                 <h2>Music</h2>
                 <p>Listen to our newest music releases.</p>
             </a>
             <a href="podcasts" class="product-box">
-                <img src="assets.unlim8ted.com/images/products/podcasts/podcasts icon.png" alt="Podcast">
+                <img src="https://assets.unlim8ted.com/images/products/podcasts/podcasts icon.png" alt="Podcast">
                 <h2>Podcasts</h2>
                 <p>Listen to our newest podcasts.</p>
             </a>
             <a href="books" class="product-box">
-                <img src="assets.unlim8ted.com/images/products/books/book icon.png" alt="Books">
+                <img src="https://assets.unlim8ted.com/images/products/books/book icon.png" alt="Books">
                 <h2>Books</h2>
                 <p>Read our latest books.</p>
             </a>
             <a href="games" class="product-box">
-                <img src="assets.unlim8ted.com/images/products/games/air-hockey-preview.webp" alt="Games">
+                <img src="https://assets.unlim8ted.com/images/products/games/air-hockey-preview.webp" alt="Games">
                 <h2>Games</h2>
                 <p>Play fun and challenging games.</p>
             </a>
             <a href="physical-items" class="product-box">
-                <img src="assets.unlim8ted.com/images/products/clothes/image.webp" alt="Clothes">
+                <img src="https://assets.unlim8ted.com/images/products/clothes/image.webp" alt="Clothes">
                 <h2>Physical Items</h2>
                 <p>Check out our stylish clothes.</p>
             </a>
             <a href="software" class="product-box">
-                <img src="assets.unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
+                <img src="https://assets.unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
                     alt="Software">
                 <h2>Software</h2>
                 <p>Explore our apps and video games.</p>
             </a>
             <a href="ai" class="product-box">
-                <img src="assets.unlim8ted.com/images/products/ai/ai icon.png" alt="AI">
+                <img src="https://assets.unlim8ted.com/images/products/ai/ai icon.png" alt="AI">
                 <h2>AI</h2>
                 <p>Explore our AI products.</p>
             </a>
             <a href="images" class="product-box">
-                <img src="assets.unlim8ted.com/images/Unlim8tedImages/space with foregroudn.jpg" alt="Images">
+                <img src="https://assets.unlim8ted.com/images/Unlim8tedImages/space with foregroudn.jpg" alt="Images">
                 <h2>Images</h2>
                 <p>Explore some of our best images.</p>
             </a>
@@ -239,7 +239,7 @@
                     let isSpinning = false; // Track whether the spinner is currently spinning
 
                     // Fetch the spinner data from JSON file
-                    fetch('assets.unlim8ted.com/data/spinner.json')
+                    fetch('https://assets.unlim8ted.com/data/spinner.json')
                         .then(response => {
                             if (!response.ok) {
                                 throw new Error('Network response was not ok');
