--- a/frontend/products/music/index.html
+++ b/frontend/products/music/index.html
@@ -15,7 +15,7 @@
   <!-- MIDI parser -->
   <script src="https://cdn.jsdelivr.net/npm/@tonejs/midi"></script>
 
-  <link rel="stylesheet" href="./resources/cssassets.unlim8ted.com/music.01.css">
+  <link rel="stylesheet" href="./resources/csshttps://assets.unlim8ted.com/music.01.css">
 
 </head>
 
@@ -35,7 +35,7 @@
       </div>
 
       <div class="song-list" id="songList">
-        <!-- Built from assets.unlim8ted.com/data/products.json -->
+        <!-- Built from https://assets.unlim8ted.com/data/products.json -->
         <div class="empty">Loading tracks…</div>
       </div>
 
@@ -145,7 +145,7 @@
     </section>
   </div>
 
-  <script type="module" src="./resources/jsassets.unlim8ted.com/music.01.js"></script>
+  <script type="module" src="./resources/jshttps://assets.unlim8ted.com/music.01.js"></script>
 </body>
 
 </html>
